# qt-opencv-study

./: .gitignore  README.md
QtDlgTracker/: CMakeLists.txt  dialog.cpp
_notes/: CMakeLists.txt  reference.md  setup.md
cmake-opencv/: CMakeLists.txt
cmake-opencv/src/: main.cpp  mainwindow.cpp
img-gray/: CMakeLists.txt  main.cpp
